# knocker

./: .gitignore  AGENTS.md  API_SPEC.md  CLAUDE.md  DESIGN_DECISIONS.md  Dockerfile  README.md  SECURITY.md  SECURITY_AUDIT_SUMMARY.md  docker-compose.yml  knocker-firewall.example.yaml  knocker-firewalld.yaml  knocker.example.yaml  knocker.firewalld-example.yaml  pyproject.toml  test_openapi.json
.github/: COPILOT_INSTRUCTIONS.md  dependabot.yml
assets/: knocker-banner.xcf
dev/: Caddyfile  Dockerfile.firewalld  docker-compose-firewalld.yml  docker-compose.ci.yml  docker-compose.firewalld.localtest.yml  docker-compose.localtest.yml  docker-compose.yml  firewall_integration_tests.sh  firewalld_integration_test.local.sh  firewalld_integration_test.sh  firewalld_integration_tests.sh  knocker.ci.yaml  knocker.firewalld.yaml  local_integration_tests.local.sh  local_integration_tests.sh
docs/: API_SPEC.md  DESIGN_DECISIONS.md  FIREWALLD_INTEGRATION.md  FIREWALL_INTEGRATION.md  INTERACTIVE_DOCUMENTATION.md  PRODUCTION_CHECKLIST.md  PR_SUMMARY.md  Project-OVERVIEW.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_SUMMARY.md
knocker/: API_SPEC.md  README.md  docker-compose.yml  knocker.example.yaml
src/: config.py  core.py  errors.py  firewall.py  firewall_compat.py  firewalld.py  firewalld_integration.py  fw_integration.py  main.py  models.py  openapi_utils.py  requirements-firewalld.txt  requirements.txt  schemas.py
tests/: test_core.py  test_device_tokens.py  test_firewall.py  test_firewall_shadow.py  test_firewalld.py  test_firewalld_integration.py  test_main.py  test_main_firewalld_integration.py  test_migration.py  test_openapi.py  test_production_hardening.py  (+4 more)
(+10 files in other folders)
